[package]
name = "rustarama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap_complete_command = "0.5.1"
curl = "0.4.44"
json = "0.12.4"
scraper = "0.17.1"
